# MueLuML

./: README.md  speakeasy_gpt_py.ipynb
matlab/: particleswarm.m  pointcloud.m
matrixgen/: CMakeLists.txt  loadmods.sh  matrixgen  matrixgen.cc  particle_swarm.h  submit.sh
optimize/: CMakeLists.txt  optimize  optimize.cc  particle_swarm.h  script.sh
parallel_swarms/: CMakeLists.txt  CMakeListsARC.txt  clean  particle_swarm.h  single_optimal_parallel.cc
statistics/: CMakeLists.txt  create_encoded_data.py  mtx_stats  mtx_stats.cc
suite_sparse/: CMakeLists.txt  CMakeLists0.txt  create_labeled_data.py  dnn.py  get_suite_sparse_data.py  mtx_optimal.cc  particle_swarm.h  particle_swarm_t.h  test_ps.cc
vis/: Grid Search Visualization.ipynb  rename_files.py
vis/.ipynb_checkpoints/: Grid Search Visualization-checkpoint.ipynb
vis/data/droptol_sadamping/: Droptol SA Daming Visualization.ipynb
vis/data/droptol_sadamping/.ipynb_checkpoints/: Droptol SA Daming Visualization-checkpoint.ipynb
